objects/SFRelease__OrgCoverageTrends__c.object
<CustomObject>
    <fields>
        <fullName>SFRelease__Calculated_Date__c</fullName>
        <label>Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFRelease__Comparison_Report_History__c</fullName>
        <label>Comparison Report History</label>
        <referenceTo>SFRelease__Comparison_Report_History__c</referenceTo>
        <relationshipLabel>OrgCoverageTrends</relationshipLabel>
        <relationshipName>OrgCoverageTrends</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org_Code_Coverage__c</fullName>
        <label>Org Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org__c</fullName>
        <label>Org</label>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>OrgCoverageTrends</relationshipLabel>
        <relationshipName>OrgCoverageTrends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OrgCoverageTrends</label>
    <listViews>
        <fullName>SFRelease__All</fullName>
        <columns>NAME</columns>
        <columns>SFRelease__Org__c</columns>
        <columns>SFRelease__Org_Code_Coverage__c</columns>
        <columns>SFRelease__Calculated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OCT-{0000}</displayFormat>
        <label>OrgCoverageTrends Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgCoverageTrends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>